# graphics-2018

./: CMakeLists.txt  CMakeLists.txt.new  application.hpp  camera.cpp  camera.hpp  entity.cpp  entity.hpp  font.cpp  font.hpp  main.cpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  orthographic.cpp  orthographic.hpp  path.cpp  path.hpp  physics.cpp  physics.hpp  program.cpp  program.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  shape.cpp  shape.hpp  sprite.cpp  sprite.hpp  texture.cpp  texture.hpp
cmake/: FindODE.cmake
cmake.new/: FindSDL2TTF.cmake
models/: cube.blend  cube.mtl  floor.blend  floor.mtl  sphere.dae  sphere.mtl
shaders/: bump_fragment.glsl  bump_vertex.glsl  ortho_fragment.glsl  ortho_vertex.glsl
