cmake_minimum_required(VERSION 3.9)
project("Rendering Engine Project")
find_package(ASSIMP REQUIRED)
find_package(GLEW REQUIRED)
find_package(OPENGL REQUIRED)
find_package(SDL2 REQUIRED)
find_package(SDL2_image REQUIRED)
include_directories(${ASSIMP_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIRS} ${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS})
set(CMAKE_CXX_STANDARD 11)
add_executable(bump main.cpp application.hpp camera.cpp shader.cpp program.cpp mesh.hpp mesh.cpp model.hpp model.cpp renderer.hpp renderer.cpp texture.hpp texture.cpp material.hpp path.hpp path.cpp)
target_link_libraries(bump ${ASSIMP_LIBRARIES} ${GLEW_LIBRARIES} ${OPENGL_LIBRARIES} ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES})